# PrimeTV2

./: CMakeLists.txt  CMakeLists.txt~  CPackConfig.cmake  CPackSourceConfig.cmake  Color.cpp  Colours.cpp  Colours.h  Coord.cc  Coord.hh  DrawTree_time.cc  DrawTree_time.hh  FindCairo.cmake  FindCairo.cmake~  GeneCoord.cc~  INSTALL  LICENSE  Layout.cpp  Layout.h  Makefile  PrimeTV.kdev4  README  TODO  WELCOME  application.qrc  canvas.cpp  canvas.h  cmake_install.cmake  configuration.ini  edge.cpp  edge.h  install_manifest.txt  layoutrees.cpp  layoutrees.h  log.txt  log_errors.txt  mainops.cpp  mainops.h  options.cmake  parameters.cpp  parameters.h  (+7 more)
.kdev4/: PrimeTV.kdev4
Examples/: cyano.stree  cyano.trees  cyano1.gtree  cyano1.rtree  cyano2.gtree  cyano2.rtree  cyano3.gtree  cyano3.rtree  cyano4.rtree  cyano5.gtree  cyano5.rtree  cyano6.gtree  cyano6.rtree  mapfile.map  molli.stree  molli1.rtree  molli2.rtree  molli3.rtree
cmake/: FindCairo.cmake  options_cmake.h.in  utils.cmake
libraries/: AnError.cc  AnError.hh  BeepVector.hh  CMakeLists.txt  CMakeLists.txt~  NHXannotation.h  NHXnode.c  NHXparse.c  NHXparse.h  NHXparse.y  NHXtree.c  Node.cc  Node.cc~  Node.hh  Node.hh~  NodeMap.cc  NodeMap.hh  NodeNodeMap.cc  NodeNodeMap.hh  PerturbationObservable.cc  PerturbationObservable.hh  SetOfNodes.cc  SetOfNodes.hh  SetOfNodesEx.hh  StrStrMap.cc  StrStrMap.cc~  StrStrMap.hh  Tree.cc  Tree.cc~  Tree.hh  Tree.hh~  TreeIO.cc  TreeIO.hh  TreeIOTraits.cc  TreeIOTraits.cc~  TreeIOTraits.hh  TreeIOTraits.hh~  configfile.cpp~  configfile.h  configfile.h~  (+9 more)
resources/: application.qrc  config.cfg  configuration.ini  parameters.ui  primetv.ui
resources/ui/: parameters.ui  primetv.ui
src/: .canvas.cpp.kate-swp  CMakeLists.txt  Color.cpp  Color.h  Colours.cpp  Colours.h  DrawTree_time.cc  DrawTree_time.hh  GraphicView.cpp  GraphicView.h  Mainops.cpp  Mainops.h  Parameters.cpp  Parameters.h  canvas.cpp  canvas.h  edge.cpp  edge.h  layoutrees.cpp  layoutrees.h  mainops.cpp  mainops.h  parameters.cpp  parameters.h  phyltr.cpp  phyltr.h  primetv.cc  primetv.cpp  windows.cpp  windows.h
src/draw/: Color.cpp  Color.h  Colours.cpp  Colours.h  DrawTreeCairo.cpp  DrawTreeCairo.h
src/gui/: Canvas.cpp  Canvas.h  GraphicView.cpp  GraphicView.h  Windows.cpp  Windows.h
src/layout/: Edge.cpp  Edge.h  Layoutrees.cpp  Layoutrees.h
src/lgt/: Phyltr.cpp  Phyltr.h
src/libraries/: AnError.cc  AnError.hh  BeepVector.hh  CMakeLists.txt  NHXannotation.c  NHXannotation.h  NHXnode.c  NHXnode.h  NHXparse.c  NHXparse.h  NHXtree.c  NHXtree.h  Node.cc  Node.hh  SetOfNodesEx.hh  StrStrMap.cc  StrStrMap.hh  Tree.cc  Tree.hh  TreeIO.cc  TreeIO.hh  TreeIOTraits.cc  TreeIOTraits.hh  configfile.cpp  configfile.h  gammamapex.h  lambdamapex.h  lexer.c  treeextended.cpp  treeextended.h
src/parser/: NHX.l  NHXannotation.c  NHXannotation.h  NHXnode.c  NHXnode.h  NHXparse.c  NHXparse.h  NHXparse.output  NHXparse.y  NHXtree.c  NHXtree.h  lexer.c  y.tab.c
src/reconcilation/: BeepVector.h  BeepVector.hh  GammaMapEx.cpp  GammaMapEx.h  LambdaMapEx.cpp  LambdaMapEx.h  SetOfNodesEx.h  SetOfNodesEx.hh  StrStrMap.cc  StrStrMap.cpp  StrStrMap.h  StrStrMap.hh
src/test/: Breadthfirsttopdown.cpp  Breadthfirsttopdown.h  CMakeLists.txt  GeneralTests.cpp  GeneralTests.h  TestSuite.cpp  TestSuite.h  linearizer.h  unit_main.cpp
src/tree/: Node.cc  Node.cpp  Node.h  Node.hh  Tree.cc  Tree.cpp  Tree.h  Tree.hh  TreeExtended.cpp  TreeIO.cc  TreeIO.cpp  TreeIO.h  TreeIO.hh  TreeIOTraits.cc  TreeIOTraits.cpp  TreeIOTraits.h  TreeIOTraits.hh  Treeextended.cpp  Treeextended.h
src/utils/: AnError.cc  AnError.cpp  AnError.h  AnError.hh  ConfigFile.cpp  ConfigFile.h
